# rnfbjni

./: .gitignore  App.js  README.md  app.json  package.json
android/: build.gradle  gradle.properties  gradlew.bat  settings.gradle
android/app/: BUCK  CMakeLists.txt  build.gradle  grpc.cmake  script.sh
android/app/src/cpp/: Client.cpp  Logger.cpp  NativeModules.cpp  NativeModules.h  TrimNativeModule.cpp  jsiInstaller.cpp  sample.cpp
android/app/src/debug/: AndroidManifest.xml
android/app/src/debug/java/com/rnfbjni/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rnfbjni/: MainActivity.java  MainApplication.java  MyHybrid.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
cpp/: Logger.h  NativeModules.h  TrimNativeModule.cpp  TrimNativeModule.h
cpp/libopaque-cmake/: common.h  opaque.c  opaque.h
cpp/libopaque-cmake/aux/: crypto_kdf_hkdf_sha256.h  kdf_hkdf_sha256.c
cpp/net/: Client.h  generate.sh  helloworld.grpc.pb.h
ios/: Client.mm  Logger.mm  Podfile  Proto.podspec  setup_libsodium.sh
ios/rnfbjni/: AppDelegate.m  AppDelegate.mm  Info.plist
ios/rnfbjni.xcodeproj/: project.pbxproj
ios/rnfbjni.xcodeproj/xcshareddata/xcschemes/: rnfbjni.xcscheme
ios/rnfbjni.xcworkspace/: contents.xcworkspacedata
ios/rnfbjni/Base.lproj/: LaunchScreen.xib
